# drtaint

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  drtaint.c  utils.c
src/lib/: engine.c  engine.h
